# renovate-issue-12003

./: README.md  index.html  pyproject.toml  renovate-config.js
.github/workflows/: renovate-dependencies.yml
some-dependency/: index.html  some_dependency-1.0.0-py3-none-any.whl  some_dependency-1.1.0-py3-none-any.whl
