[tool.poetry]
name = "some_dependency"
version = "1.1.0"
description = "an empty python package to be used as a dummy dependency"
authors = ["Christopher Frieler, <christopher.frieler@dm.de>"]
repository = "https://github.com/christopherfrieler/renovate-issue-12003"

[tool.poetry.dependencies]
python = "~3.8"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
